# uncolor

./: .envrc  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  renovate.json  setup.cfg
.circleci/: config.yml
.github/workflows/: pipeline.yml
tests/data/: rainbow_256.in.txt  rainbow_256.out.txt  rainbow_truecolor.in.txt  rainbow_truecolor.out.txt
tests/test_rainbow/: test_uncolor.py
uncolor/: __init__.py  cli.py
