[tool.poetry]
name = "uncolor"
version = "0.1.0"
description = "strips ANSI colors from a data stream"
authors = ["Ryan Delaney <ryan.patrick.delaney@protonmail.com>"]
#classifiers = [ ]

[tool.poetry.dependencies]
python = "^3.7"
pytest-datadir = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "=20.8b1"
flake8 = "^3.8.4"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^20.11.1"
flake8-builtins = "^1.5.3"
pytest = "^6.1"
pytest-mock = "^3.3.1"
pytest-icdiff = "^0.5"
pytest-cov = "^2.10.1"
mypy = "^0.790"
isort = "^5.6.4"
mock = "^4.0.2"

[tool.poetry.scripts]
uncolor = "uncolor:uncolor"

[tool.pytest.ini_options]
console_output_style = "progress"
mock_use_standalone_module = true

[tool.black]
line-length = 79
target_version = ["py37"]

[tool.isort]
[settings]
combine_star = true
include_trailing_comma = true
indent='    '
known_first_party = []
known_third_party = []
length_sort = false
line_length = 79
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
