[tool.poetry]
name = "uncolor"
version = "0.1.0"
description = "strips ANSI colors from a data stream"
authors = ["Ryan Delaney <ryan.patrick.delaney@protonmail.com>"]
#classifiers = [ ]

[tool.poetry.dependencies]
python = "^3.7"
pytest-datadir = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "=21.6b0"
flake8 = "^4.0.0"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^22.0.0"
flake8-builtins = "^1.5.3"
pytest = "^7.0"
pytest-mock = "^3.6.1"
pytest-icdiff = "^0.5"
pytest-cov = "^3.0.0"
mypy = "^0.940"
isort = "^5.9.2"
mock = "^4.0.3"

[tool.poetry.scripts]
uncolor = "uncolor:uncolor"

[tool.pytest.ini_options]
console_output_style = "progress"
mock_use_standalone_module = true

[tool.black]
line-length = 79
target_version = ["py37"]

[tool.isort]
[settings]
combine_star = true
include_trailing_comma = true
indent='    '
known_first_party = []
known_third_party = []
length_sort = false
line_length = 79
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
