[tool.poetry]
name = "uncolor"
version = "0.1.4"
description = "strips ANSI colors from a data stream"
license = "Apache 2.0"
authors = ["Ryan Delaney <ryan.patrick.delaney+git@protonmail.com>"]
repository = "https://github.com/rpdelaney/uncolor"
homepage = "https://pypi.org/project/uncolor"
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.7"
pytest-datadir = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "^5.0.0"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^22.0.0"
flake8-builtins = "^2.0.0"
pytest = "^7.0"
pytest-mock = "^3.6.1"
pytest-icdiff = "^0.6"
pytest-cov = "^4.0.0"
mypy = "^0.991"
isort = "^5.9.2"
mock = "^4.0.3"

[tool.poetry.scripts]
uncolor = "uncolor:uncolor"

[tool.pytest.ini_options]
console_output_style = "progress"
mock_use_standalone_module = true

[tool.black]
line-length = 79
target_version = ["py37"]

[tool.isort]
[settings]
combine_star = true
include_trailing_comma = true
indent='    '
known_first_party = []
known_third_party = []
length_sort = false
line_length = 79
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
